personal dotfile update